         answer its simple  - 
         step1 - create file mongodb.js
         step2  - break index.js code in functions so that you don't confuze




lecture 32 - in this lecture we have create insert file for insert data nodejs to mongoDB
 lecture 33 - in this lecture data have updated using node js to mongoDB
 lecture -34 - this lecture , we have created delete.js file and data has deleted by using deleted method deletedMany

lecture35 - Basic api with mongodb
    haum kabhi bhi api sai body pass nahi kar sktai h

lecture36 - Post api with Mongodb
step1 - now, we we are wrting data in postman and send to nodejs
        but i have one question how to send daya and  how i will find data in node js recive or not
        whenever i get data to postman, we use middleware 
        app.use() method
        app.use(express.json()) because over data will be enable



lecture37 - Update data in Mongodb
   route mai "/:name" pass kiya to hum isssai req.params.name sai hi access kar sktai h

lecture -38 delete api using Mongodb
 const mongodb = require('mongodb')
 object_id = new mongodb.ObjectId(req.params.id)   
 id ko object id banaya


--------------------------------------------------------------------------------------
lecture-39 
Mongoose with node
mongoose have two part 1st schema and other is Modal

what is schema? - 
it Basically validates database validation

In this schema we defined ,which field you have keeped in database like as name ,id ,address,brand,price,

if we  does not defines field in schema such as number . in this case,mongoose will denine to add undefined field

in schema we use type validation


What is Modal? -
Modal Basically connect Mongodb to nodejs

What is different between Modal and Schema ?
all field in database such as - name,class,number 
we have defined it Schema so that validation will be apply

but Modal Basically have used to schema and connect Mongodb to nodejs


lecture-40 CRUD with mongoose
  






