@@ -1,0 +1,3 @@
+const mongoose = require('mongoose')
+mongoose.connect('mongodb://localhost:27017/e-come')
+
